remove getConditionalMana from assertManaPool